# StratumGTK

./: .gitignore  README.md  dev.seelos.drucken3d.json  dev.seelos.drucken3d.json~  download_dependencies.py  local.sh  meson.build  msys2-requirements.txt  requirements.txt  run.py  stratum.spec
.github/workflows/: flatpak.yml  windows-build.yml
data/: dev.seelos.drucken3d.desktop.in  dev.seelos.drucken3d.gschema.xml  dev.seelos.drucken3d.metainfo.xml.in  dev.seelos.drucken3d.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: drucken3d.gresource.xml  drucken3d.in  main.py  mesh_gl_area.py  meson.build  style.css  window.py  window.ui
src/lib/: mask_creation.py  mesh_generator.py
